--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ input:focus {
     border-color: #8052ec;
 }
 
-.additional-button {
+button {
     background: #8052ec;
     border-radius: 5px;
     border: none;
@@ -44,11 +44,11 @@ input:focus {
     float: right;
 }
 
-.additional-button:hover {
+button:hover {
     opacity: 0.8;
 }
 
-.additional-button:active {
+button:active {
     opacity: 0.6;
 }
 
