--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ button:active {
     margin-top: 60px;
 }
 
-.to-do-items {
+.task {
     background: #f2f2f2;
     box-shadow: 1px 4px 10px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
@@ -84,7 +84,7 @@ button:active {
     color: #4f0fc5;
 }
 
-.to-do-items:hover .rocket-button {
+.task:hover .rocket-button {
     opacity: 1;
 }
 
@@ -111,6 +111,11 @@ button:active {
     color: #ff0000;
 }
 
-.to-do-items:hover .trash-can-button {
+.task:hover .trash-can-button {
     opacity: 1;
+}
+
+.done {
+    background-color: lawngreen;
+    text-decoration: line-through;
 }
